Add working tip calculator page and JS

--- a/titanium/templates/home.html
+++ b/titanium/templates/home.html
@@ -4,9 +4,9 @@
   <p>Select a mini-site:</p>
 
   <div class="menu">
-    <a href="#">Red Rover Calculator</a>
     <a href="#">Tip Calculator</a>
     <a href="#">Finance Tracker</a>
     <a href="#">Car Maintenance</a>
+    <a href="#">Dog Shots</a>
   </div>
 {% endblock %}
