--- a/titanium/static/css/style.css
+++ b/titanium/static/css/style.css
@@ -14,3 +14,11 @@ a {
   border-radius: 8px;
 }
 a:hover { background: #0a58ca; }
+
+.results-box{
+  display: grid;
+  place-items: center;
+  height: 200px;
+  border: 3px solid green;
+
+}
