--- a/titanium/templates/home.html
+++ b/titanium/templates/home.html
@@ -4,7 +4,7 @@
   <p>Select a mini-site:</p>
 
   <div class="menu">
-    <a href="#">Tip Calculator</a>
+    <a href="{{ url_for('main.tip_calculator') }}">Tip Calculator</a>
     <a href="#">Finance Tracker</a>
     <a href="#">Car Maintenance</a>
     <a href="#">Dog Shots</a>
