Finalize tip calculator and prepare for AWS deployment

--- a/titanium/templates/tip.html
+++ b/titanium/templates/tip.html
@@ -10,7 +10,13 @@
 
         <div class="tip-input">
         <label for="tip">Tip %:</label>
-        <input type="number" id="tip">
+        
+        <div class="tip-presets">
+            <button type="button" class="preset" data-tip="10">10%</button>
+            <button type="button" class="preset" data-tip="15">15%</button>
+            <button type="button" class="preset" data-tip="20">20%</button>
+        </div>
+        <input type="number" id="tip" placeholder="Custom tip">
         </div>
 
         <div class="button-row">
