Integrated SQLite, Blueprints, and Car Maintenance

--- a/core/templates/tip.html
+++ b/core/templates/tip.html
@@ -36,7 +36,8 @@
     </form>
     </div>
 
-    <script src="{{ url_for('static', filename='tip_calculator/tip.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/tip.js') }}"></script>
+
 
 {% endblock %}
 
