--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -4,9 +4,9 @@
   <p>Select a mini-site:</p>
 
   <div class="menu">
-    <a href="{{ url_for('main.tip_calculator') }}">Tip Calculator</a>
+    <a href="{{ url_for('tip.tip_home') }}">Tip Calculator</a>
     <a href="#">Finance Tracker</a>
-    <a href="#">Car Maintenance</a>
+    <a href="{{ url_for('car.car_home') }}">Car Maintenance</a>
     <a href="#">Dog Shots</a>
   </div>
 {% endblock %}
